--- a/main.html
+++ b/main.html
@@ -16,23 +16,29 @@
     <script type="text/javascript" src="./script.js">
 </script>
 	<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-  <div class="carousel-inner">
-    <div class="carousel-item active">
+  <div class="carousel-inner id="myCarouse">
+    <div class="carousel-item active first-slide">
       <img class="d-block w-100" src="..." alt="First slide">
     </div>
-    <div class="carousel-item">
+    <div class="carousel-item second-slide">
       <img class="d-block w-100" src="..." alt="Second slide">
     </div>
-    <div class="carousel-item">
+    <div class="carousel-item third-slide">
+      <img class="d-block w-100" src="..." alt="Third slide">
+    </div>
+	   <div class="carousel-item fourth-slide">
+      <img class="d-block w-100" src="..." alt="Third slide">
+    </div>
+	   <div class="carousel-item fifth-slide">
       <img class="d-block w-100" src="..." alt="Third slide">
     </div>
   </div>
-  <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+  <a class="carousel-control-prev left" href="#carouselExampleControls" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon  glyphicon-chevron-left" aria-hidden="true"></span>
     <span class="sr-only">Previous</span>
   </a>
-  <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+  <a class="carousel-control-next right" href="#carouselExampleControls" role="button" data-slide="next">
+    <span class="carousel-control-next-icon  glyphicon-chevron-right" aria-hidden="true"></span>
     <span class="sr-only">Next</span>
   </a>
 </div>
