--- a/main.html
+++ b/main.html
@@ -16,14 +16,14 @@
     <script type="text/javascript" src="./script.js">
 </script>
 	<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-  <div class="carousel-inner id="myCarouse">
-    <div class="carousel-item active first-slide">
+  <div class="carousel-inner id="myCarousel">
+    <div class="carousel-item first-slide">
       <img class="d-block w-100" src="..." alt="First slide">
     </div>
     <div class="carousel-item second-slide">
       <img class="d-block w-100" src="..." alt="Second slide">
     </div>
-    <div class="carousel-item third-slide">
+    <div class="carousel-item third-slide active">
       <img class="d-block w-100" src="..." alt="Third slide">
     </div>
 	   <div class="carousel-item fourth-slide">
@@ -33,7 +33,7 @@
       <img class="d-block w-100" src="..." alt="Third slide">
     </div>
   </div>
-  <a class="carousel-control-prev left" href="#carouselExampleControls" role="button" data-slide="prev">
+  <a class="carousel-control-pre left" href="#carouselExampleControls" role="button" data-slide="prev">
     <span class="carousel-control-prev-icon  glyphicon-chevron-left" aria-hidden="true"></span>
     <span class="sr-only">Previous</span>
   </a>
