--- a/main.html
+++ b/main.html
@@ -15,8 +15,8 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-	<div id="carouselExampleControls" class="carousel slide" data-ride="carousel" id="myCarousel">
-  <div class="carousel-inner >
+	<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+  <div class="carousel-inner"  id="myCarousel >
     <div class="carousel-item first-slide">
       <img class="d-block w-100" src="..." alt="First slide">
     </div>
