--- a/main.html
+++ b/main.html
@@ -18,7 +18,7 @@
 
 </head>
 
-<body id="myCarousel">
+<body class="carousel slide">
     <!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
     </script>
@@ -45,7 +45,7 @@
                     class="d-block w-100" alt="...">
             </div>
         </div>
-        <a class="carousel-control-pre left" href="#carouselExampleControls" role="button" data-slide="prev">
+        <a class="carousel-control-pre left carousel-control" href="#carouselExampleControls" role="button" data-slide="prev">
             <span class="carousel-control-prev-icon  glyphicon-chevron-left" aria-hidden="true"></span>
             <span class="sr-only">Previous</span>
         </a>
