--- a/main.html
+++ b/main.html
@@ -49,7 +49,7 @@
             <span class="carousel-control-prev-icon  glyphicon-chevron-left" aria-hidden="true"></span>
             <span class="sr-only">Previous</span>
         </a>
-        <a class="carousel-control-next right" href="#carouselExampleControls" role="button" data-slide="next">
+        <a class="carousel-control-next right carousel-control" href="#carouselExampleControls" role="button" data-slide="next">
             <span class="carousel-control-next-icon  glyphicon-chevron-right" aria-hidden="true"></span>
             <span class="sr-only">Next</span>
         </a>
