--- a/main.html
+++ b/main.html
@@ -46,11 +46,11 @@
             </div>
         </div>
         <a class="carousel-control-pre left carousel-control" href="#carouselExampleControls" role="button" data-slide="prev">
-            <span class="carousel-control-prev-icon  glyphicon-chevron-left" aria-hidden="true"></span>
+            <span class="carousel-control-prev-icon  glyphicon-chevron-left glyphicon" aria-hidden="true"></span>
             <span class="sr-only">Previous</span>
         </a>
         <a class="carousel-control-next right carousel-control" href="#carouselExampleControls" role="button" data-slide="next">
-            <span class="carousel-control-next-icon  glyphicon-chevron-right" aria-hidden="true"></span>
+            <span class="carousel-control-next-icon  glyphicon-chevron-right glyphicon" aria-hidden="true"></span>
             <span class="sr-only">Next</span>
         </a>
     </div>
